@@ -6,8 +6,9 @@ then you win. –- Mahatma Gandhi
 
 Wed, May 20, 2009
 ---------------------------------------------------------------------
-- Make sure we handle the case when previous asset is deleted or no longer available.
-- Make sure we handle the case when related asset is deleted or no longer available.
+- Gracefully handle use cases when previous or related asset is deleted or protected.
+- Make sure commentable object exists and is accessible to current user.
+- Implemented specs for Comments controller.
 
 Tue, May 19, 2009
 ---------------------------------------------------------------------
